Fix navbar alignment and mobile menu

--- a/style.css
+++ b/style.css
@@ -47,8 +47,9 @@ body{
   list-style: none;
   display: flex;
   gap: 25px;
-  width: 100%;
-  left: 0;
+  align-items: center;
+
+  margin-left: auto;
 }
 
 .nav-links li a {
@@ -327,7 +328,7 @@ body{
 }
 
 /* HAMBURGER (hidden on desktop) */
-.menu-toggle {
+#menu-toggle {
   display: none;
   font-size: 28px;
   cursor: pointer;
@@ -341,7 +342,7 @@ body{
       grid-template-columns: repeat(2,1fr);
     }
   
-  .menu-toggle {
+  #menu-toggle {
     display: block;
   }
 
@@ -358,7 +359,7 @@ body{
       z-index: 1000;  
                       /* stay above hero */
      position: absolute;
-     top: 100px;
+     top: 70px;
      left: 2px;
      width: 60px;
      flex-direction: column;
@@ -372,6 +373,7 @@ body{
 
     .nav-links {
       backdrop-filter: blur(8px);
+      display: flex;
     }
 
     .nav-links li {
